--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 #root {
-  height: 100%;
+  height: 100vh;
   background-color: #0cbaba;
   background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 }
