--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,60 +20,8 @@ body {
 }
 #root {
   height: 100vh;
-  background-color: #00c2ff;
-  opacity: 1;
-
-  /* generated on www.magicpattern.design */
-  background-image: linear-gradient(
-      30deg,
-      #eeeeee 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #eeeeee 87.5%,
-      #eeeeee
-    ),
-    linear-gradient(
-      150deg,
-      #eeeeee 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #eeeeee 87.5%,
-      #eeeeee
-    ),
-    linear-gradient(
-      30deg,
-      #eeeeee 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #eeeeee 87.5%,
-      #eeeeee
-    ),
-    linear-gradient(
-      150deg,
-      #eeeeee 12%,
-      transparent 12.5%,
-      transparent 87%,
-      #eeeeee 87.5%,
-      #eeeeee
-    ),
-    linear-gradient(
-      60deg,
-      #eeeeee77 25%,
-      transparent 25.5%,
-      transparent 75%,
-      #eeeeee77 75%,
-      #eeeeee77
-    ),
-    linear-gradient(
-      60deg,
-      #eeeeee77 25%,
-      transparent 25.5%,
-      transparent 75%,
-      #eeeeee77 75%,
-      #eeeeee77
-    );
-  background-size: 22px 39px;
-  background-position: 0 0, 0 0, 11px 19px, 11px 19px, 0 0, 11px 19px;
+  background-color: #b1bfd8;
+  background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
 }
 
 /* Background gradients */
